--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -948,6 +948,10 @@ a {
   width: 1.25rem;
 }
 
+.w-1\/3 {
+  width: 33.333333%;
+}
+
 .max-w-xl {
   max-width: 36rem;
 }
@@ -1179,12 +1183,26 @@ a {
   background-color: rgb(67 56 202 / var(--tw-bg-opacity));
 }
 
+.bg-violet-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(124 58 237 / var(--tw-bg-opacity));
+}
+
+.bg-violet-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .from-green-500 {
@@ -1217,6 +1235,10 @@ a {
 
 .to-cyan-500 {
   --tw-gradient-to: #06b6d4;
+}
+
+.to-violet-500 {
+  --tw-gradient-to: #8b5cf6;
 }
 
 .object-contain {
@@ -1496,6 +1518,11 @@ a {
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
+.text-purple-900 {
+  --tw-text-opacity: 1;
+  color: rgb(88 28 135 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1594,6 +1621,16 @@ a {
 .hover\:text-pink-500:hover {
   --tw-text-opacity: 1;
   color: rgb(236 72 153 / var(--tw-text-opacity));
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
