--- a/public/custom.css
+++ b/public/custom.css
@@ -23,6 +23,10 @@ a:hover, a:visited, a:link, a:active {
   display: none;
 }
 
+.centered {
+  left: 50%;
+  margin-left: -12.5em;
+}
 
 #pot {
    
