--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -750,6 +750,14 @@ a {
   left: 25%;
 }
 
+.left-1\/3 {
+  left: 33.333333%;
+}
+
+.left-96 {
+  left: 24rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -893,8 +901,28 @@ a {
   margin-bottom: 2.5rem;
 }
 
+.ml-12 {
+  margin-left: 3rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
+}
+
+.ml-72 {
+  margin-left: 18rem;
+}
+
+.ml-96 {
+  margin-left: 24rem;
+}
+
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -1041,12 +1069,20 @@ a {
           transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .items-start {
@@ -1592,6 +1628,16 @@ a {
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
+.text-pink-700 {
+  --tw-text-opacity: 1;
+  color: rgb(190 24 93 / var(--tw-text-opacity));
+}
+
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
 .decoration-0 {
   text-decoration-thickness: 0px;
 }
@@ -1900,6 +1946,10 @@ a {
     margin-top: 1.25rem;
   }
 
+  .md\:mt-72 {
+    margin-top: 18rem;
+  }
+
   .md\:grid {
     display: grid;
   }
@@ -1929,6 +1979,10 @@ a {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .md\:pb-10 {
+    padding-bottom: 2.5rem;
   }
 
   .md\:text-6xl {
@@ -2173,6 +2227,10 @@ a {
     padding-bottom: 5rem;
   }
 
+  .lg\:pb-32 {
+    padding-bottom: 8rem;
+  }
+
   .lg\:text-left {
     text-align: left;
   }
@@ -2200,8 +2258,42 @@ a {
     padding-right: 4rem;
   }
 
+  .xl\:pb-32 {
+    padding-bottom: 8rem;
+  }
+
   .xl\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .\32xl\:mt-96 {
+    margin-top: 24rem;
+  }
+
+  .\32xl\:mt-\[600\] {
+    margin-top: 600;
+  }
+
+  .\32xl\:mt-\[600px\] {
+    margin-top: 600px;
+  }
+
+  .\32xl\:pb-32 {
+    padding-bottom: 8rem;
+  }
+
+  .\32xl\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .\32xl\:pb-72 {
+    padding-bottom: 18rem;
   }
 }
