--- a/public/custom.css
+++ b/public/custom.css
@@ -2,10 +2,10 @@
     font-family: 'Pacifico', cursive;
 }
 .indie{
-  font-family: 'Roboto Flex', sans-serif;
+  font-family: 'Patrick Hand', cursive;
 }
 p, h1, dd {
-  font-family: 'Roboto Flex', sans-serif;
+  font-family: 'Patrick Hand', cursive;
 }
 
 a:hover, a:visited, a:link, a:active {
