--- a/public/custom.css
+++ b/public/custom.css
@@ -50,8 +50,12 @@ a:hover, a:visited, a:link, a:active {
 }
 
 .centered {
-  left: 50%;
-  margin-left: -12.5em;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 #pot {
@@ -70,7 +74,7 @@ a:hover, a:visited, a:link, a:active {
       -webkit-transform: rotateY(0deg); 
     }
     50% { 
-      right: calc(80%);
+      right: calc(70%);
       -webkit-transform: rotateY(180deg); 
     }
     98% {
