--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -958,6 +958,10 @@ a {
   height: 2.5rem;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1847,6 +1851,14 @@ a {
 
   .md\:h-96 {
     height: 24rem;
+  }
+
+  .md\:h-32 {
+    height: 8rem;
+  }
+
+  .md\:h-72 {
+    height: 18rem;
   }
 
   .md\:w-full {
