--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -982,6 +982,14 @@ a {
   margin-bottom: 1.5rem;
 }
 
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.mt-72 {
+  margin-top: 18rem;
+}
+
 .block {
   display: block;
 }
@@ -1042,6 +1050,10 @@ a {
   height: 0.75rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1076,6 +1088,14 @@ a {
 
 .w-3 {
   width: 0.75rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .max-w-xl {
@@ -1129,6 +1149,14 @@ a {
 
 .cursor-not-allowed {
   cursor: not-allowed;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1254,6 +1282,16 @@ a {
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+
+.border-indigo-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(79 70 229 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-gray-100 {
@@ -1560,6 +1598,14 @@ a {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -2378,16 +2424,28 @@ a {
 }
 
 @media (min-width: 1280px) {
-  .xl\:mt-\[400px\] {
-    margin-top: 400px;
-  }
-
-  .xl\:mt-\[430px\] {
-    margin-top: 430px;
-  }
-
   .xl\:mt-\[450px\] {
     margin-top: 450px;
+  }
+
+  .xl\:mt-\[500px\] {
+    margin-top: 500px;
+  }
+
+  .xl\:mt-\[300px\] {
+    margin-top: 300px;
+  }
+
+  .xl\:mt-\[350px\] {
+    margin-top: 350px;
+  }
+
+  .xl\:mt-\[3560px\] {
+    margin-top: 3560px;
+  }
+
+  .xl\:mt-\[360px\] {
+    margin-top: 360px;
   }
 
   .xl\:inline {
