--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -982,6 +982,10 @@ a {
   margin-top: 18rem;
 }
 
+.mt-36 {
+  margin-top: 9rem;
+}
+
 .block {
   display: block;
 }
@@ -2107,6 +2111,10 @@ a {
 
   .md\:ml-6 {
     margin-left: 1.5rem;
+  }
+
+  .md\:mt-36 {
+    margin-top: 9rem;
   }
 
   .md\:flex {
